[metadata]
name = hideip
version = 0.1.0
description = Converter from text to International Phonetic Alphabets
long_description = file: README.md
long_description_content_type = text/markdown
author = Joseph Quang
author_email = tquang.sdh20@hcmut.edu.vn
url = https://github.com/tquangsdh20/hideip
license = Apache 2.0
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32, macOS
classifiers = 
    Intended Audience :: Education
    Intended Audience :: End Users/Desktop
    Development Status :: 5 - Production/Stable
    Operating System :: OS Independent
    License :: OSI Approved :: Apache Software License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options.packages.find]
where=src

[bdist_wheel]
universal = true

[options]
packages = 
    hideip
install_requires =
    requests>=2.23
    PySocks>=1.7
package_dir =
    =.
include_package_data = yes
zip_safe = no
keywords = 
    hideme
    hideip
    proxy
